netlify deploy file modification

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,6 @@ PUB_CACHE = "/opt/buildhome/.pub-cache"
 
 [[plugins]]
 package = "@netlify/plugin-cache-core"
+
+[[plugins]]
+package = "netlify-plugin-flutter"
